--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
@@ -50,8 +50,8 @@
                         "value": null
                     },
                     {
-                        "label": "'='",
-                        "value": "="
+                        "label": "'=='",
+                        "value": "=="
                     },
                     {
                         "label": "'!='",
