--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -18,7 +18,8 @@
             },
             "bindings": {
                 "currentTemplate": {"<-": "@image.selectedValue.presets"},
-                "currentTemplateVolumes": {"<-": "@owner.currentTemplate.static_volumes.concat(@owner.currentTemplate.volumes)"},
+                "currentStaticVolumes": {"<-": "@owner.currentTemplate.static_volumes.map{{ host_path: host_path, container_path: container_path, readonly: readonly, isLocked: true }}"},
+                "currentTemplateVolumes": {"<-": "@owner.currentStaticVolumes.concat(@owner.currentTemplate.volumes)"},
                 "object.image": {"<-": "@image.selectedValue.name"},
                 "_availablesDockers": {"<-": "@owner._hostDockers.map{{label: name, value: id}}"},
                 "object.interactive": {"<-": "@owner.currentTemplate.interactive"},
@@ -198,7 +199,7 @@
                 "element": {"#": "volumesTable"}
             },
             "bindings": {
-                "values": {"<-": "@owner.currentTemplateVolumes.map{{ host_path: host_path, container_path: container_path, readonly: readonly }}"}
+                "values": {"<-": "@owner.currentTemplateVolumes.map{{ host_path: host_path, container_path: container_path, readonly: readonly , isLocked: isLocked }}"}
             }
         },
 
