Disable save button when sub-selectors is displayed in the docker container creator.

--- a/ui/controls/field-treeview.reel/field-treeview.html
+++ b/ui/controls/field-treeview.reel/field-treeview.html
@@ -11,6 +11,7 @@
             },
             "bindings": {
                 "displayedPath": {"<-": "@pathInput.value"},
+                "inspector.isSaveDisabled": {"<-": "!!@owner.isExpanded"},
                 "classList.has('is-expanded')": {"<-": "@owner.isExpanded"}
             },
             "listeners": [
