--- a/ui/sections/containers/controls/table-volume.reel/table-row-volume.reel/table-row-volume.html
+++ b/ui/sections/containers/controls/table-volume.reel/table-row-volume.reel/table-row-volume.html
@@ -33,6 +33,7 @@
                 "isNotTypable": false
             },
             "bindings": {
+                "inspector": {"<-": "@owner.inspector"},
                 "selectedPath": {"<-": "@owner.object.host_path"}
             }
         },
