--- a/ui/sections/containers/controls/table-volume.reel/table-volume.html
+++ b/ui/sections/containers/controls/table-volume.reel/table-volume.html
@@ -47,6 +47,7 @@
                 "element": {"#": "newEntry"}
             },
             "bindings": {
+                "inspector": {"<-": "@owner.inspector"},
                 "object": {"<-": "@table.currentNewEntry.object"}
             }
         },
@@ -57,6 +58,7 @@
                 "element": {"#": "entry"}
             },
             "bindings": {
+                "inspector": {"<-": "@owner.inspector"},
                 "object": {"<-": "@table:rowIteration.object.object"}
             }
         }
