--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -197,6 +197,7 @@
                 "element": {"#": "volumesTable"}
             },
             "bindings": {
+                "inspector": {"<-": "@inspector"},
                 "values": {"<-": "@owner.currentTemplate.volumes.map{{ host_path: host_path, container_path: container_path, readonly: readonly }}"}
             }
         },
