changes disconnection-modal to pull from blue-shark

--- a/ui/disconnection-modal.reel/disconnection-modal.html
+++ b/ui/disconnection-modal.reel/disconnection-modal.html
@@ -11,7 +11,7 @@
             }
         },
         "modal": {
-            "prototype": "ui/controls/modal.reel",
+            "prototype": "blue-shark/ui/modal.reel",
             "properties": {
                 "element": {"#": "modal"}
             },
