changes sign-in modal to pull from blue-shark, adds confirmation modal

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -70,7 +70,7 @@
             }
         },
         "modal": {
-            "prototype": "../controls/modal.reel",
+            "prototype": "blue-shark/ui/modal.reel",
             "properties": {
                 "element": {"#": "modal"}
             }
@@ -114,8 +114,19 @@
                 "switchValue": {"<-": "@owner.sectionGeneration"}
             }
         },
+        "confirmationModal": {
+            "prototype": "blue-shark/ui/confirmation-modal.reel",
+            "properties": {
+                "element": {"#": "confirmationModal"}
+            },
+            "bindings": {
+                "isShown": {"<-": "@owner.application.confirmationModal.isShown"},
+                "message": {"<-": "@owner.application.confirmationModal.message"},
+                "title": {"<-": "@owner.application.confirmationModal.title"}
+            }
+        },
         "signInModal": {
-            "prototype": "ui/controls/modal.reel",
+            "prototype": "blue-shark/ui/modal.reel",
             "properties": {
                 "element": {"#": "signInModal"}
             },
@@ -159,6 +170,7 @@
         </div>
         <div data-montage-id="modal" class="Main-modal"></div>
         <div data-montage-id="disconnectionModal"></div>
+        <div data-montage-id="confirmationModal"></div>
     </div>
 </body>
 </html>
