--- a/ui/widgets/tasks.reel/tasks.html
+++ b/ui/widgets/tasks.reel/tasks.html
@@ -8,38 +8,14 @@
             "properties": {
                 "element": {"#": "owner"}
             }
-        },
-
-        "notifications": {
-            "prototype": "ui/dashboard/notifications.reel",
-            "properties": {
-                "element": {"#": "notifications"},
-                "type": "TASK",
-                "emptyText": "No Current Tasks"
-            },
-            "bindings": {
-                "notifications": {"<-": "@owner.tasks.filter{!parent}.sorted{id}.reversed()"}
-            }
-        },
-
-        "widget": {
-            "prototype": "ui/dashboard/widgets/widget.reel",
-            "properties": {
-                "element": {"#": "widget"}
-            }
         }
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="Tasks">
-         <div data-montage-id="widget">
-            <div data-arg="widget-title">
-                <svg data-montage-id="icon" class="Notifications-icon"><use xlink:href="#i-tasks"/></svg>
-                <div data-montage-id="title" class="Notifications-title">Tasks</div>
-            </div>
-            <div data-arg="widget-content" data-montage-id="notifications"></div>
-        </div>
+        <link rel="import" href="/components/widgets/tasks-widget/tasks-widget.html">
+        <tasks-widget></tasks-widget>
     </div>
 </body>
 </html>
