added boot pool topology table in System/Boot Volume UI

--- a/ui/sections/system/inspectors/boot-pool.reel/boot-pool.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-pool.html
@@ -40,6 +40,16 @@
         "bytesSizeConverter": {
             "prototype": "montage/core/converter/bytes-converter"
         },
+        "bootVolumeName": {
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "bootVolumeName"},
+                "label": "Name"
+            },
+            "bindings": {
+                "value": {"<-": "@owner.bootVolume.id"}
+            }
+        },
         "bootVolumeSize": {
             "prototype": "blue-shark/ui/field-text.reel",
             "properties": {
@@ -82,6 +92,27 @@
                 "value": {"<-": "@owner.bootVolume.status"}
             }
         },
+        "bootVolumeType": {
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "bootVolumeType"},
+                "label": "Type"
+            },
+            "bindings": {
+                "value": {"<-": "@owner.bootVolume.groups.data.0.type"}
+            }
+        },
+        "bootPoolTopologyTable": {
+            "prototype": "./boot-pool-topology-table.reel",
+            "properties": {
+                "element": {"#": "bootPoolTopologyTable"},
+                "label": "Boot Pool Topology",
+                "contentMaxHeight": 8
+            },
+            "bindings": {
+                "object": {"<-": "@owner.bootVolume"}
+            }
+        },
         "activeEnvironmentTable": {
             "prototype": "./boot-environment-table.reel",
             "properties": {
@@ -117,10 +148,13 @@
 <body>
     <div data-montage-id="owner" class="BootPool">
         <div data-montage-id="inspector">
+            <div data-montage-id="bootVolumeName"></div>
+            <div data-montage-id="bootVolumeType"></div>
             <div data-montage-id="bootVolumeSize"></div>
             <div data-montage-id="bootVolumeUsed"></div>
             <div data-montage-id="bootVolumeCapacityUsed"></div>
             <div data-montage-id="bootVolumeCondition"></div>
+            <div data-montage-id="bootPoolTopologyTable" class="BootPool-table"></div>
             <div data-montage-id="activeEnvironmentTable" class="BootPool-table BootPool-activeEnvironmentTable"></div>
             <div data-montage-id="inactiveEnvironmentTable" class="BootPool-table"></div>
             <div data-arg="footer-additional-button" class="ActionButtons">
