--- a/ui/sections/task/controls/table-task.reel/table-task.html
+++ b/ui/sections/task/controls/table-task.reel/table-task.html
@@ -8,6 +8,9 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
+            },
+            "bindings": {
+                "selectedRow": {"<-": "@table.selectedRow"}
             }
         },
         "table": {
@@ -16,6 +19,7 @@
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
                 "label": "Tasks",
+                "isSelectionEnabled": true,
                 "columns": [
                     {
                         "value": "ID",
