fixes scrolling on tasks section

--- a/ui/sections/task/inspectors/tasks.reel/tasks.html
+++ b/ui/sections/task/inspectors/tasks.reel/tasks.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-
+    <link rel="stylesheet" href="tasks.css">
     <script type="text/montage-serialization">
     {
         "owner": {
@@ -56,7 +56,7 @@
 <body>
     <div data-montage-id="owner" class="TasksInspector">
         <div data-montage-id="inspector">
-            <div data-montage-id="viewTabs" class="Calendar-viewTabs"></div>
+            <div data-montage-id="viewTabs" class="Calendar-viewTabs g-margin-bottom"></div>
             <div data-montage-id="table"></div>
             <div data-montage-id="details"></div>
         </div>
