Wire confirmation-modal promise

--- a/ui/main-sidebar/main-navigation.reel/main-navigation-item.reel/main-navigation-item.html
+++ b/ui/main-sidebar/main-navigation.reel/main-navigation-item.reel/main-navigation-item.html
@@ -9,6 +9,9 @@
             "properties": {
                 "element": {"#": "owner"},
                 "icon": {"#": "icon"}
+            },
+            "bindings": {
+                "classList.has('selected')": {"<-": "@owner.isSelected"}
             }
         },
 
