--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -122,7 +122,8 @@
             "bindings": {
                 "isShown": {"<-": "@owner.application.confirmationModal.isShown"},
                 "message": {"<-": "@owner.application.confirmationModal.message"},
-                "title": {"<-": "@owner.application.confirmationModal.title"}
+                "title": {"<-": "@owner.application.confirmationModal.title"},
+                "deferred": {"<-": "@owner.application.confirmationModal.deferred"}
             }
         },
         "signInModal": {
