Hide vm tools status if creating a new vm
Ticket: #20253

--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -273,6 +273,9 @@
             "properties": {
                 "label": "VM Tools Status",
                 "element": {"#": "guestInfoStatus"}
+            },
+            "bindings": {
+                "classList.has('is-hidden')": {"<-": "@owner.object._isNew"}
             }
         },
         "guestInfoLoadAvg": {
