--- a/ui/sections/containers/controls/table-volume.reel/table-volume.html
+++ b/ui/sections/containers/controls/table-volume.reel/table-volume.html
@@ -18,7 +18,10 @@
                 "label": "Volumes",
                 "columns":  [
                     {
-                        "value": "host path"
+                        "value": "type"
+                    },
+                    {
+                        "value": "path"
                     },
                     {
                         "value": "container path"
