--- a/ui/sections/system/inspectors/preferences.reel/preferences.html
+++ b/ui/sections/system/inspectors/preferences.reel/preferences.html
@@ -156,6 +156,9 @@
             "properties": {
                 "element": {"#": "applyConfig"},
                 "value": "Apply Config File"
+            },
+            "bindings": {
+                "disabled": {"<-": "!@owner.configFile"}
             }
         },
         "factoryRestore": {
